[gd_scene load_steps=5 format=3 uid="uid://c0c52v6k2ha14"]

[ext_resource type="Script" uid="uid://byc8dehv0qm78" path="res://Scripts/SavePreview.gd" id="1_i5vwo"]
[ext_resource type="PackedScene" uid="uid://dwc0cutqm2vpa" path="res://Scenes/PlayerPortrait.tscn" id="1_jiwbm"]
[ext_resource type="FontFile" uid="uid://cq55vl12vholm" path="res://fonts/3x5 pixel font.ttf" id="2_i5vwo"]
[ext_resource type="Texture2D" uid="uid://bow0d2qimqvaf" path="res://Art/types/type_icons.png" id="3_62rqm"]

[node name="SavePreview" type="Node2D"]
script = ExtResource("1_i5vwo")

[node name="PlayerPortraitHolder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerPortrait" parent="PlayerPortraitHolder" instance=ExtResource("1_jiwbm")]
position = Vector2(0, -2)

[node name="NameLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -28.0
offset_right = 14.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i5vwo")
theme_override_font_sizes/font_size = 6
text = "Armaldo"
horizontal_alignment = 1

[node name="Border" type="ColorRect" parent="NameLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="ColorRect" parent="NameLabel/Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RankLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = 19.0
offset_right = 5.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i5vwo")
theme_override_font_sizes/font_size = 6
text = "#1"
horizontal_alignment = 1

[node name="Border" type="ColorRect" parent="RankLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -2.0
offset_right = 3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="ColorRect" parent="RankLabel/Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Type0Holder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_top = -16.0
offset_right = -26.0
offset_bottom = -16.0
grow_horizontal = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Type0Holder"]
texture = ExtResource("3_62rqm")
region_enabled = true
region_rect = Rect2(8, 0, 8, 8)

[node name="Type1Holder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 26.0
offset_top = -16.0
offset_right = 26.0
offset_bottom = -16.0
grow_horizontal = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Type1Holder"]
texture = ExtResource("3_62rqm")
region_enabled = true
region_rect = Rect2(8, 0, 8, 8)
